# boutiqueado

./: .coverage  .coveragerc  .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt
bag/: context.py  views.py
bag/templates/bag/: bag.html
boutique_ado/: settings.py  urls.py
home/: test_views.py  urls.py  views.py
home/templates/home/: index.html
htmlcov/: home___init___py.html  home_admin_py.html  home_apps_py.html  home_migrations___init___py.html  home_models_py.html  home_test_views_py.html  home_tests_py.html  home_urls_py.html  home_views_py.html  index.html  products___init___py.html  products_admin_py.html  products_apps_py.html  products_migrations_0001_initial_py.html  products_migrations___init___py.html  products_models_py.html  products_test_models_py.html  products_test_views_py.html  products_tests_py.html  products_urls_py.html  products_views_py.html  status.json
products/: admin.py  models.py  test_models.py  test_views.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_auto_20200522_0816.py
products/templates/products/: product_detail.html  products.html
static/css/: base.css
templates/: base.html
templates/includes/: -main-nav.html
templates/includes/toasts/: toast_error.html  toast_info.html  toast_success.html  toast_warning.html
