[tool.poetry]
name = "boutiqueado"
version = "0.1.0"
description = ""
authors = ["Lewis <ljleighfield@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
django-allauth = "^0.41.0"
coverage = "^5.1"
pillow = "^8.2.0"
codecov = "^2.0.22"
pytest-cov = "^2.8.1"
pytest = "^5.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
